--- a/index.html
+++ b/index.html
@@ -1,15 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Code ABC 3</title>
       <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
-      <section class="text-yellow-300">
+      <section class="bg-blue-200 min-h-screen py-20 flex flex-col gap-20 ">
+            <div class="font-bold text-6xl text-center pb-10"><span class="text-[#2489C3]">Our</span> Process</div>
+            <!-- process 1 -->
+            <div class="max-w-5xl mx-auto flex gap-10  p-2 ">
+                  <div class=" flex justify-end ">
+                        <div
+                              class=" h-[120px] w-[120px] p-4 bg-white rounded-lg flex items-center justify-center border border-blue-400  ">
+                              <img src="./images/image 6.png" alt="" />
+                        </div>
+                  </div>
+                  <div class="border border-blue-400 p-4 bg-white rounded-lg ">
+                        <h1 class="text-xl font-bold">1. Create Your Profile</h1>
+                        <p>Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document
+                              or a typeface without relying on meaningful content.</p>
+                  </div>
+            </div>
+
+
+            <!-- process 2 -->
+            <div class="max-w-5xl mx-auto flex gap-10  p-2">
+                  <div class="w-[420px] flex justify-end ">
+                        <div
+                              class=" h-[120px] w-[120px] p-4 bg-white rounded-lg flex items-center justify-center border border-blue-400 ">
+                              <img src="./images/image 6.png" alt="" />
+                        </div>
+                  </div>
+                  <div class=" p-4 bg-white rounded-lg border border-blue-400">
+                        <h1 class="text-xl font-bold">2. Create Your Profile</h1>
+                        <p>Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document
+                              or a typeface without relying on meaningful content.</p>
+                  </div>
+            </div>
+
+
+            <!-- process 3 -->
+            <div class="max-w-5xl mx-auto flex gap-10  p-2">
+                  <div class="w-[620px] flex justify-end ">
+                        <div
+                              class=" h-[120px] w-[120px] p-4 bg-white rounded-lg flex items-center justify-center border border-blue-400 ">
+                              <img src="./images/image 7.png" alt="" />
+                        </div>
+                  </div>
+                  <div class="border border-blue-400 p-4 bg-white rounded-lg ">
+                        <h1 class="text-xl font-bold">3. Create Your Profile</h1>
+                        <p>Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document
+                              or a typeface without relying on meaningful content.</p>
+                  </div>
+            </div>
+
+
+            <!-- process 4-->
+            <div class="max-w-5xl mx-auto flex gap-10  p-2">
+                  <div class="w-[420px] flex justify-end ">
+                        <div
+                              class=" h-[120px] w-[120px] p-4 bg-white rounded-lg flex items-center justify-center border border-blue-400 ">
+                              <img src="./images/image 8.png" alt="" />
+                        </div>
+                  </div>
+                  <div class=" p-4 bg-white rounded-lg border border-blue-400">
+                        <h1 class="text-xl font-bold">4. Create Your Profile</h1>
+                        <p>Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document
+                              or a typeface without relying on meaningful content.</p>
+                  </div>
+            </div>
+
+            <!-- process 5 -->
+            <div class="max-w-5xl mx-auto flex gap-10  p-2 ">
+                  <div class=" flex justify-end ">
+                        <div
+                              class=" h-[120px] w-[120px] p-4 bg-white rounded-lg flex items-center justify-center border border-blue-400  ">
+                              <img src="./images/image 9.png" alt="" />
+                        </div>
+                  </div>
+                  <div class="border border-blue-400 p-4 bg-white rounded-lg ">
+                        <h1 class="text-xl font-bold">5. Create Your Profile</h1>
+                        <p>Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document
+                              or a typeface without relying on meaningful content.</p>
+                  </div>
+            </div>
+
+
 
       </section>
-  
+
 </body>
+
 </html>
