--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <section class="bg-blue-200 min-h-screen py-20 flex flex-col gap-20 ">
             <div class="font-bold text-6xl text-center pb-10"><span class="text-[#2489C3]">Our</span> Process</div>
             <!-- process 1 -->
-            <div class="max-w-5xl mx-auto flex gap-10  p-2 ">
-                  <div class=" flex justify-end ">
+            <div class="max-w-5xl mx-auto flex flex-col md:flex-row gap-10  p-2 bg-white border-xl rounded-xl shadow-sm md:shadow-none md:bg-transparent ">
+                  <div class=" flex md:justify-end ">
                         <div
-                              class=" h-[120px] w-[120px] p-4 bg-white rounded-lg flex items-center justify-center border border-blue-400  ">
+                              class="w-full h-[120px] md:w-[120px] p-4 bg-white rounded-lg flex items-center justify-center border border-blue-400  ">
                               <img src="./images/image 6.png" alt="" />
                         </div>
                   </div>
@@ -28,10 +28,10 @@
 
 
             <!-- process 2 -->
-            <div class="max-w-5xl mx-auto flex gap-10  p-2">
-                  <div class="w-[420px] flex justify-end ">
+            <div class="max-w-5xl mx-auto flex flex-col md:flex-row gap-10  p-2 bg-white border-xl rounded-xl shadow-sm md:shadow-none md:bg-transparent ">
+                  <div class="w-full md:w-[420px] flex justify-end ">
                         <div
-                              class=" h-[120px] w-[120px] p-4 bg-white rounded-lg flex items-center justify-center border border-blue-400 ">
+                              class="w-full h-[120px] md:w-[120px] p-4 bg-white rounded-lg flex items-center justify-center border border-blue-400 ">
                               <img src="./images/image 6.png" alt="" />
                         </div>
                   </div>
@@ -44,10 +44,10 @@
 
 
             <!-- process 3 -->
-            <div class="max-w-5xl mx-auto flex gap-10  p-2">
-                  <div class="w-[620px] flex justify-end ">
+            <div class="max-w-5xl mx-auto flex flex-col md:flex-row gap-10  p-2 bg-white border-xl rounded-xl shadow-sm md:shadow-none md:bg-transparent ">
+                  <div class=" md:w-[620px] flex md:justify-end ">
                         <div
-                              class=" h-[120px] w-[120px] p-4 bg-white rounded-lg flex items-center justify-center border border-blue-400 ">
+                              class="w-full h-[120px] md:w-[120px] p-4 bg-white rounded-lg flex items-center justify-center border border-blue-400 ">
                               <img src="./images/image 7.png" alt="" />
                         </div>
                   </div>
@@ -60,10 +60,10 @@
 
 
             <!-- process 4-->
-            <div class="max-w-5xl mx-auto flex gap-10  p-2">
-                  <div class="w-[420px] flex justify-end ">
+            <div class="max-w-5xl mx-auto flex flex-col md:flex-row gap-10  p-2 bg-white border-xl rounded-xl shadow-sm md:shadow-none md:bg-transparent ">
+                  <div class="w-full md:w-[420px] flex md:justify-end ">
                         <div
-                              class=" h-[120px] w-[120px] p-4 bg-white rounded-lg flex items-center justify-center border border-blue-400 ">
+                              class="w-full h-[120px] md:w-[120px] p-4 bg-white rounded-lg flex items-center justify-center border border-blue-400 ">
                               <img src="./images/image 8.png" alt="" />
                         </div>
                   </div>
@@ -75,10 +75,10 @@
             </div>
 
             <!-- process 5 -->
-            <div class="max-w-5xl mx-auto flex gap-10  p-2 ">
-                  <div class=" flex justify-end ">
+            <div class="max-w-5xl mx-auto flex flex-col md:flex-row gap-10  p-2 bg-white border-xl rounded-xl shadow-sm md:shadow-none md:bg-transparent ">
+                  <div class=" flex md:justify-end ">
                         <div
-                              class=" h-[120px] w-[120px] p-4 bg-white rounded-lg flex items-center justify-center border border-blue-400  ">
+                              class="w-full h-[120px] md:w-[120px] p-4 bg-white rounded-lg flex items-center justify-center border border-blue-400  ">
                               <img src="./images/image 9.png" alt="" />
                         </div>
                   </div>
